# AoC2023

./: .gitignore  Cargo.toml  README.md  get-input.sh
.github/workflows/: rust.yml
src/: main.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day18.rs  day20.rs
src/etc/: mod.rs  solution.rs
