[package]
    edition="2021"
    name   ="advent_of_code_template"
    version="0.1.0"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    anyhow        ="1.0.75"
    once_cell     ="1.19.0"
    priority-queue="1.3.1"
    regex         ="1.10.2"

[profile.release]
    lto=true
